WebSocket, Lobby & Mechanics (#4)
* Fixed work with HttpSession

* Fixed database url for heroku

* Actualizing frontend origin url

* Update Spring Boot version

* Refactoring for CORS config

* Add WebSocket config

* Start implement web socket transport system

* Implement abstract class and interface

* Refactoring constants

* Add function to check is exist user profile

* Web socket transport system completed

* Fix is exist user profile

* Fix CORS config

* Web socket user session

* Rename web socket handler

* Minor refactor

* Paired user in lobby

* Packages refactor

* Add mechanics domains

* Add mechanics do step for first player

* Update Spring-boot version

* Add functional for score board

* Fixed build

* Update swagger API doc

* Update version in Readme

* Add users url to CORS

* Get not found if users list is empty

* Revert "Update Spring-boot version"

This reverts commit d54fdad

* Fixed position and offset

* Refactor

* CORS: add new origin and POST only for singUp

* Update origin to tech-gwent

* Update origin https

*  Rename lines

* Init game, take pair players

* Fix message system

* UserInfo rename to Player

* Create game interface

* Update Readme file

* Update Readme file

* Add test

* Mechanics and tests

* Refactoring code

* Update version API

* Fix Common header

* Fixed crutch from ConcurrentModificationException

* Minor refactoring

* Update API version

* Add maven as dev tools
